--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.2"
+    "@types/js-cookie": "^3.0.2",
+    "gh-pages": "^4.0.0"
   }
 }
