--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "ats_ui_ts",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
@@ -12,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/antd": "^1.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.9",
@@ -19,17 +22,39 @@
     "@types/react-dom": "^18.0.9",
     "antd": "^5.0.7",
     "bootstrap": "^5.2.3",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.0.3",
+    "draft-js": "^0.11.7",
+    "express": "^4.18.2",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "nodemailer": "^6.9.1",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-card-flip": "^1.2.0",
+    "react-compound-slider": "^0.16.3",
+    "react-countdown": "^2.3.5",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-draft-wysiwyg-a": "^1.14.5-1",
+    "react-multi-email": "^1.0.6",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-time-range-slider": "^1.1.2",
     "react-uuid": "^2.0.0",
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.6",
+    "suneditor": "^2.44.8",
+    "suneditor-react": "^3.4.1",
     "typescript": "^4.9.4",
+    "use-react-countdown": "^1.0.4",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,6 +82,6 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
-    "gh-pages": "^4.0.0"
+    "@types/nodemailer": "^6.4.7"
   }
 }
