--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "react-uuid": "^2.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
